Actualizo algo numpy

--- a/TPs/Totalmente resueltos/Obligatorios Modulo 6/Módulo 6 - Ejercicios.ipynb
+++ b/TPs/Totalmente resueltos/Obligatorios Modulo 6/Módulo 6 - Ejercicios.ipynb
@@ -37,6 +37,82 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9a756621",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.zeros(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ee3038b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ceros = np.zeros(10)\n",
+    "ceros[5] = 1\n",
+    "ceros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0fb57184",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[10,  5, 14],\n",
+       "        [ 4, 15,  5],\n",
+       "        [17,  6, 14]],\n",
+       "\n",
+       "       [[ 3, 11, 15],\n",
+       "        [ 9,  1, 11],\n",
+       "        [ 7,  7, 12]],\n",
+       "\n",
+       "       [[12, 13, 17],\n",
+       "        [ 9,  5,  5],\n",
+       "        [18, 11, 14]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(1, 20, (3,3,3))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c757d8bd",
    "metadata": {},
@@ -49,6 +125,307 @@
     "- 2.4) Cree un array de 11x11 y llenelo de valores aleatorios enteros entre 1 y 100 y normalice sus valores. La normalización esta dada por,\n",
     "$$ z_i = \\frac{x_i - \\bar{X}}{\\sigma} $$\n",
     "- 2.5) A partir de un array de números enteros, encuentre cual es valor que más se repite. Revise la función *nunmpy.unique()* para ayudarse."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8d841b02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[59, 97, 51, 28,  0, 46, 21, 97, 10, 18],\n",
+       "       [33, 30, 18, 43, 51, 26, 45, 60, 97, 11],\n",
+       "       [94, 11, 32, 79,  7, 25, 89, 49, 87, 53],\n",
+       "       [46, 66, 48, 28, 26, 22, 23, 38, 32, 21],\n",
+       "       [34, 60, 54,  2, 71, 50, 32, 14, 36,  1],\n",
+       "       [ 0, 85, 79, 75, 30, 72,  3, 34, 54, 92],\n",
+       "       [30, 10, 28, 96, 22, 15, 79, 69, 91, 30],\n",
+       "       [40, 92, 70, 27, 52, 53,  9, 64,  2, 44],\n",
+       "       [69, 56,  6, 33, 50, 56, 43, 20, 62, 92],\n",
+       "       [87,  5,  9, 52, 90, 33,  0, 67, 52, 73]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz =np.random.randint(0,100, (10,10))\n",
+    "matriz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8442f082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44.73"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ec77c728",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([49.2, 51.2, 39.5, 46.3, 39.9, 39.8, 34.4, 51.2, 52.3, 43.5])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.apply_along_axis(lambda x: np.mean(x), 0, matriz) #media por fila"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a952cdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([42.7, 41.4, 52.6, 35. , 35.4, 52.4, 47. , 45.3, 48.7, 46.8])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.apply_along_axis(lambda x: np.mean(x), 1, matriz) #media por columna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9e5f7052",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[29, 73, 15, 22, 96, 25, 36,  2, 63, 77, 73],\n",
+       "       [72, 25, 83, 86, 85, 46, 72, 48, 15, 77, 50],\n",
+       "       [72, 82, 65,  1, 28, 99, 78,  8, 84, 71, 27],\n",
+       "       [32,  7, 46, 77, 78, 69, 55, 84, 65, 93, 97],\n",
+       "       [16, 74, 38, 48, 63, 17, 56, 39, 19, 89, 73],\n",
+       "       [ 5, 37, 73, 20, 19, 97, 83, 83, 40, 23, 19],\n",
+       "       [41, 39, 27, 69, 63,  8, 30, 60, 66, 73,  2],\n",
+       "       [67, 92, 50, 63, 39, 87, 94, 86, 12, 31, 69],\n",
+       "       [36, 69,  6,  9, 18, 56,  3, 58, 95, 82, 44],\n",
+       "       [22, 14, 98, 25, 74, 60,  6, 40, 25, 42, 41],\n",
+       "       [26, 41, 63, 57,  9, 29, 90, 95, 87, 58,  4]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz2 = np.random.randint(1, 100, (11,11))\n",
+    "matriz2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f1d4b89e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalizacion = np.vectorize(lambda x: (x-np.mean(matriz2))/np.std(matriz2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a061204d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.76480344,  0.76595352, -1.25186247, -1.00833296,  1.56612193,\n",
+       "        -0.90396316, -0.52127392, -1.70413158,  0.41805421,  0.90511324,\n",
+       "         0.76595352],\n",
+       "       [ 0.73116359, -0.90396316,  1.11385283,  1.21822262,  1.18343269,\n",
+       "        -0.17337461,  0.73116359, -0.10379475, -1.25186247,  0.90511324,\n",
+       "        -0.03421489],\n",
+       "       [ 0.73116359,  1.0790629 ,  0.48763407, -1.73892151, -0.79959337,\n",
+       "         1.67049173,  0.93990318, -1.49539199,  1.14864276,  0.69637366,\n",
+       "        -0.8343833 ],\n",
+       "       [-0.66043365, -1.53018192, -0.17337461,  0.90511324,  0.93990318,\n",
+       "         0.6267938 ,  0.13973476,  1.14864276,  0.48763407,  1.46175214,\n",
+       "         1.60091186],\n",
+       "       [-1.21707254,  0.80074345, -0.45169406, -0.10379475,  0.41805421,\n",
+       "        -1.18228261,  0.17452469, -0.41690413, -1.11270275,  1.32259242,\n",
+       "         0.76595352],\n",
+       "       [-1.59976178, -0.48648399,  0.76595352, -1.07791282, -1.11270275,\n",
+       "         1.60091186,  1.11385283,  1.11385283, -0.3821142 , -0.97354303,\n",
+       "        -1.11270275],\n",
+       "       [-0.34732427, -0.41690413, -0.8343833 ,  0.6267938 ,  0.41805421,\n",
+       "        -1.49539199, -0.73001351,  0.31368442,  0.522424  ,  0.76595352,\n",
+       "        -1.70413158],\n",
+       "       [ 0.55721394,  1.42696221, -0.03421489,  0.41805421, -0.41690413,\n",
+       "         1.25301255,  1.49654207,  1.21822262, -1.35623227, -0.69522358,\n",
+       "         0.6267938 ],\n",
+       "       [-0.52127392,  0.6267938 , -1.56497185, -1.46060206, -1.14749268,\n",
+       "         0.17452469, -1.66934165,  0.24410456,  1.531332  ,  1.0790629 ,\n",
+       "        -0.24295448],\n",
+       "       [-1.00833296, -1.2866524 ,  1.63570179, -0.90396316,  0.80074345,\n",
+       "         0.31368442, -1.56497185, -0.3821142 , -0.90396316, -0.31253434,\n",
+       "        -0.34732427],\n",
+       "       [-0.86917323, -0.34732427,  0.41805421,  0.20931463, -1.46060206,\n",
+       "        -0.76480344,  1.35738235,  1.531332  ,  1.25301255,  0.24410456,\n",
+       "        -1.63455171]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizacion(matriz2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ac59cdf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1],\n",
+       " [2, 2],\n",
+       " [1, 3],\n",
+       " [1, 4],\n",
+       " [1, 5],\n",
+       " [2, 6],\n",
+       " [1, 7],\n",
+       " [2, 8],\n",
+       " [2, 9],\n",
+       " [1, 12],\n",
+       " [1, 14],\n",
+       " [2, 15],\n",
+       " [1, 16],\n",
+       " [1, 17],\n",
+       " [1, 18],\n",
+       " [3, 19],\n",
+       " [1, 20],\n",
+       " [2, 22],\n",
+       " [1, 23],\n",
+       " [4, 25],\n",
+       " [1, 26],\n",
+       " [2, 27],\n",
+       " [1, 28],\n",
+       " [2, 29],\n",
+       " [1, 30],\n",
+       " [1, 31],\n",
+       " [1, 32],\n",
+       " [2, 36],\n",
+       " [1, 37],\n",
+       " [1, 38],\n",
+       " [3, 39],\n",
+       " [2, 40],\n",
+       " [3, 41],\n",
+       " [1, 42],\n",
+       " [1, 44],\n",
+       " [2, 46],\n",
+       " [2, 48],\n",
+       " [2, 50],\n",
+       " [1, 55],\n",
+       " [2, 56],\n",
+       " [1, 57],\n",
+       " [2, 58],\n",
+       " [2, 60],\n",
+       " [5, 63],\n",
+       " [2, 65],\n",
+       " [1, 66],\n",
+       " [1, 67],\n",
+       " [4, 69],\n",
+       " [1, 71],\n",
+       " [3, 72],\n",
+       " [5, 73],\n",
+       " [2, 74],\n",
+       " [3, 77],\n",
+       " [2, 78],\n",
+       " [2, 82],\n",
+       " [3, 83],\n",
+       " [2, 84],\n",
+       " [1, 85],\n",
+       " [2, 86],\n",
+       " [2, 87],\n",
+       " [1, 89],\n",
+       " [1, 90],\n",
+       " [1, 92],\n",
+       " [1, 93],\n",
+       " [1, 94],\n",
+       " [2, 95],\n",
+       " [1, 96],\n",
+       " [2, 97],\n",
+       " [1, 98],\n",
+       " [1, 99]]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repeticiones = [[len(np.where(matriz2 == i)[0]), i] for i in np.unique(matriz2)]\n",
+    "repeticiones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "6284a421",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(repeticiones, axis = 0)[-1][1]"
    ]
   },
   {
@@ -144,6 +521,14 @@
     "\n",
     "Cargue una imágen RGB y obtenga 4 arrays correspondientes a los cuatro cadrantes de la imágen."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf3339bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
